--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "motion": "^10.14.2",
     "react": ">=18.2.0",
     "react-dom": ">=18.2.0",
+    "react-motion": "^0.5.2",
     "react-parallax-mouse": "^1.7.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
