--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "homepage": "https://wwww.leodeleon.co/yooshi",
+  "name": "Yooshi Japanese Cuisine",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
